@@ -265,7 +265,7 @@ end
 do --create stop
 local function createStop(entity)
   if global.LogisticTrainStops[entity.unit_number] then
-    if log_level >= 1 then printmsg({"ltn-message.error-duplicated-unit_number", entity.unit_number}) end
+    if log_level >= 1 then printmsg({"ltn-message.error-duplicated-unit_number", entity.unit_number}, entity.force) end
     return
   end
 
@@ -292,7 +292,7 @@ local function createStop(entity)
     --tracks = entity.surface.find_entities_filtered{type="straight-rail", area={{entity.position.x-3, entity.position.y+1},{entity.position.x+3, entity.position.y+3}} }
     rot = 6
   else --invalid orientation
-    if log_level >= 1 then printmsg({"ltn-message.error-stop-orientation", entity.direction}) end
+    if log_level >= 1 then printmsg({"ltn-message.error-stop-orientation", entity.direction}, entity.force) end
     entity.destroy()
     return
   end
@@ -379,7 +379,7 @@ local function createStop(entity)
     stopsPerTick = 1 --initialize ticker indexes
     global.stopIdStartIndex = 1
     script.on_event(defines.events.on_tick, ticker) --subscribe ticker on first created train stop
-    if log_level >= 4 then printmsg("on_tick subscribed", false) end
+    if log_level >= 4 then printmsg("on_tick subscribed") end
   end
 end
 
@@ -455,7 +455,7 @@ function removeStop(entity)
 
   if StopIDList == nil or #StopIDList == 0 then
     script.on_event(defines.events.on_tick, nil) --unsubscribe ticker on last removed train stop
-    if  log_level >= 4 then printmsg("on_tick unsubscribed: Removed last Logistic Train Stop", false) end
+    if  log_level >= 4 then printmsg("on_tick unsubscribed: Removed last Logistic Train Stop") end
   end
 end
 
@@ -615,7 +615,7 @@ function ticker(event)
   end
   for i = global.stopIdStartIndex, stopIdLastIndex, 1 do
     local stopID = StopIDList[i]
-    if log_level >= 4 then printmsg(global.tickCount.."/"..tick.." updating stopID "..tostring(stopID), false) end
+    if log_level >= 4 then printmsg(global.tickCount.."/"..tick.." updating stopID "..tostring(stopID)) end
     UpdateStop(stopID)
   end
   global.stopIdStartIndex = stopIdLastIndex + 1
@@ -625,11 +625,11 @@ function ticker(event)
     global.tickCount = 1
     --clean up deliveries in case train was destroyed or removed
     for trainID, delivery in pairs (global.Dispatcher.Deliveries) do
-      if not delivery.train or not delivery.train.valid then
-        if log_level >= 1 then printmsg({"ltn-message.delivery-removed-train-invalid", delivery.from, delivery.to}) end
+      if not(delivery.train and delivery.train.valid) then
+        if log_level >= 1 then printmsg({"ltn-message.delivery-removed-train-invalid", delivery.from, delivery.to}, nil, false) end --storing and updating forces just to show this only to the force the train belonged to isn't worth it
         removeDelivery(trainID)
       elseif tick-delivery.started > delivery_timeout then
-        if log_level >= 1 then printmsg({"ltn-message.delivery-removed-timeout", delivery.from, delivery.to, tick-delivery.started}) end
+        if log_level >= 1 then printmsg({"ltn-message.delivery-removed-timeout", delivery.from, delivery.to, tick-delivery.started}, delivery.train.force, false) end
         removeDelivery(trainID)
       end
     end
@@ -735,7 +735,7 @@ local function GetProviders(force, item, req_count, min_length, max_length)
     and (stop.maxTraincars == 0 or min_length == 0 or stop.maxTraincars >= min_length) then --check if provider can actually service trains from requester
       local activeDeliveryCount = #stop.activeDeliveries
       if activeDeliveryCount and (stop.trainLimit == 0 or activeDeliveryCount < stop.trainLimit) then
-        if log_level >= 4 then printmsg("(GetProviders): found "..req_count.."("..tostring(stop.minProvided)..")".."/"..count.." ".. item.." at "..stop.entity.backer_name.." priority: "..stop.priority.." minTraincars: "..stop.minTraincars.." maxTraincars: "..stop.maxTraincars.." locked Slots: "..stop.lockedSlots, false) end
+        if log_level >= 4 then printmsg("(GetProviders): found "..req_count.."("..tostring(stop.minProvided)..")".."/"..count.." ".. item.." at "..stop.entity.backer_name.." priority: "..stop.priority.." minTraincars: "..stop.minTraincars.." maxTraincars: "..stop.maxTraincars.." locked Slots: "..stop.lockedSlots, stop.entity.force, false) end
         stations[#stations +1] = {entity = stop.entity, priority = stop.priority, activeDeliveryCount = activeDeliveryCount, item = item, count = count, minTraincars = stop.minTraincars, maxTraincars = stop.maxTraincars, lockedSlots = stop.lockedSlots}
       end
     end
@@ -836,7 +836,7 @@ local function GetFreeTrain(nextStop, minTraincars, maxTraincars, type, size, re
                 smallestDistance = distance
                 smallestInventory = inventorySize
                 train = {id=DispTrainKey, inventorySize=inventorySize}
-                if log_level >= 4 then printmsg("(GetFreeTrain): found train "..locomotive.backer_name..", length: "..minTraincars.."<="..#DispTrain.carriages.."<="..maxTraincars.. ", inventory size: "..inventorySize.."/"..size..", distance: "..distance, false) end
+                if log_level >= 4 then printmsg("(GetFreeTrain): found train "..locomotive.backer_name..", length: "..minTraincars.."<="..#DispTrain.carriages.."<="..maxTraincars.. ", inventory size: "..inventorySize.."/"..size..", distance: "..distance, locomotive.force, false) end
               end
             end
 
@@ -847,7 +847,7 @@ local function GetFreeTrain(nextStop, minTraincars, maxTraincars, type, size, re
               smallestDistance = distance
               largestInventory = inventorySize
               train = {id=DispTrainKey, inventorySize=inventorySize}
-              if log_level >= 4 then printmsg("(GetFreeTrain): largest available train "..locomotive.backer_name..", length: "..minTraincars.."<="..#DispTrain.carriages.."<="..maxTraincars.. ", inventory size: "..inventorySize.."/"..size..", distance: "..distance, false) end
+              if log_level >= 4 then printmsg("(GetFreeTrain): largest available train "..locomotive.backer_name..", length: "..minTraincars.."<="..#DispTrain.carriages.."<="..maxTraincars.. ", inventory size: "..inventorySize.."/"..size..", distance: "..distance, locomotive.force, false) end
             end
           end
 
@@ -875,11 +875,12 @@ function ProcessRequest(request)
   local minRequested = requestStation.minRequested
   local maxTraincars = requestStation.maxTraincars
   local minTraincars = requestStation.minTraincars
+  local requestForce = requestStation.entity.force
   local orders = {}
   local deliveries = nil
 
   if requestStation.trainLimit > 0 and #requestStation.activeDeliveries >= requestStation.trainLimit then
-    if log_level >= 4 then printmsg(requestStation.entity.backer_name.." Request station train limit reached: "..#requestStation.activeDeliveries.."("..requestStation.trainLimit..")") end
+    if log_level >= 4 then printmsg(requestStation.entity.backer_name.." Request station train limit reached: "..#requestStation.activeDeliveries.."("..requestStation.trainLimit..")", requestForce, false) end
     return nil -- reached train limit
   end
 
@@ -888,7 +889,7 @@ function ProcessRequest(request)
     -- split merged key into type & name
     local itype, iname = match(item, "([^,]+),([^,]+)")
     if not (itype and iname and (game.item_prototypes[iname] or game.fluid_prototypes[iname])) then
-      if log_level >= 1 then printmsg({"ltn-message.error-parse-item", item}) end
+      if log_level >= 1 then printmsg({"ltn-message.error-parse-item", item}, requestForce) end
       goto skipRequestItem
     end
 
@@ -902,16 +903,16 @@ function ProcessRequest(request)
     -- get providers ordered by priority
     local providers = GetProviders(requestStation.entity.force, item, count, minTraincars, maxTraincars)
     if not providers or #providers < 1 then
-      if requestStation.noWarnings == false and log_level >= 2 then printmsg({"ltn-message.no-provider-found", localname}, true) end
+      if requestStation.noWarnings == false and log_level >= 2 then printmsg({"ltn-message.no-provider-found", localname}, requestForce, true) end
       goto skipRequestItem
     end
 
     -- only one delivery is created so use only the best provider
     local providerStation = providers[1]
-    if log_level >= 3 then printmsg({"ltn-message.provider-found", providerStation.entity.backer_name, tostring(providerStation.priority), tostring(providerStation.activeDeliveryCount), providerStation.count, localname}, true)
+    if log_level >= 3 then printmsg({"ltn-message.provider-found", providerStation.entity.backer_name, tostring(providerStation.priority), tostring(providerStation.activeDeliveryCount), providerStation.count, localname}, requestForce, true)
     elseif log_level >= 4 then
       for n, provider in pairs (providers) do
-        printmsg("Provider["..n.."] "..provider.entity.backer_name..": Priority "..tostring(provider.priority)..", "..tostring(provider.activeDeliveryCount).." deliveries, "..tostring(provider.count).." "..localname.." available.")
+        printmsg("Provider["..n.."] "..provider.entity.backer_name..": Priority "..tostring(provider.priority)..", "..tostring(provider.activeDeliveryCount).." deliveries, "..tostring(provider.count).." "..localname.." available.", requestForce)
       end
     end
 
@@ -948,14 +949,14 @@ function ProcessRequest(request)
         orders[i].loadingList[#orders[i].loadingList+1] = loadingList
         orders[i].totalStacks = orders[i].totalStacks + stacks
         insertnew = false
-        if log_level >= 4 then  printmsg("inserted into order "..i.."/"..#orders.." "..from.." >> "..to..": "..deliverySize.." in "..stacks.."/"..orders[i].totalStacks.." stacks "..itype..","..iname.." min length: "..minTraincars.." max length: "..maxTraincars, false) end
+        if log_level >= 4 then  printmsg("inserted into order "..i.."/"..#orders.." "..from.." >> "..to..": "..deliverySize.." in "..stacks.."/"..orders[i].totalStacks.." stacks "..itype..","..iname.." min length: "..minTraincars.." max length: "..maxTraincars, requestForce, false) end
         break
       end
     end
     -- create new order for fluids and different provider-requester pairs
     if insertnew then
       orders[#orders+1] = {toID=toID, fromID=fromID, minTraincars=minTraincars, maxTraincars=maxTraincars, totalStacks=stacks, lockedSlots=providerStation.lockedSlots, loadingList={loadingList} }
-      if log_level >= 4 then  printmsg("added new order "..#orders.." "..from.." >> "..to..": "..deliverySize.." in "..stacks.." stacks "..itype..","..iname.." min length: "..minTraincars.." max length: "..maxTraincars, false) end
+      if log_level >= 4 then  printmsg("added new order "..#orders.." "..from.." >> "..to..": "..deliverySize.." in "..stacks.." stacks "..itype..","..iname.." min length: "..minTraincars.." max length: "..maxTraincars, requestForce, false) end
     end
 
     ::skipRequestItem:: -- use goto since lua doesn't know continue
@@ -974,7 +975,7 @@ function ProcessRequest(request)
     local toStop = global.LogisticTrainStops[orders[orderIndex].toID]
     local fromStop = global.LogisticTrainStops[orders[orderIndex].fromID]
     if not toStop or not fromStop then
-      if log_level >= 1 then printmsg({"ltn-message.error-no-stop"}) end
+      if log_level >= 1 then printmsg({"ltn-message.error-no-stop"}, requestForce) end
       goto skipOrder
     end
     local to = toStop.entity.backer_name
@@ -985,14 +986,14 @@ function ProcessRequest(request)
     if not train then
       if log_level >= 3 then
         if #loadingList == 1 then
-          printmsg({"ltn-message.no-train-found", tostring(minTraincars), tostring(maxTraincars), loadingList[1].localname}, true)
+          printmsg({"ltn-message.no-train-found", tostring(minTraincars), tostring(maxTraincars), loadingList[1].localname}, requestForce, true)
         else
-          printmsg({"ltn-message.no-train-found-merged", tostring(minTraincars), tostring(maxTraincars), tostring(totalStacks)}, true)
+          printmsg({"ltn-message.no-train-found-merged", tostring(minTraincars), tostring(maxTraincars), tostring(totalStacks)}, requestForce, true)
         end
       end
       goto skipOrder
     end
-    if log_level >= 3 then printmsg({"ltn-message.train-found", tostring(train.inventorySize), tostring(totalStacks)}) end
+    if log_level >= 3 then printmsg({"ltn-message.train-found", tostring(train.inventorySize), tostring(totalStacks)}, requestForce) end
 
     -- recalculate delivery amount to fit in train
     if train.inventorySize < totalStacks then
@@ -1021,13 +1022,13 @@ function ProcessRequest(request)
 
     if log_level >= 4 then
       for i=1, #loadingList do
-        printmsg("Creating Delivery: "..loadingList[i].count.." in "..loadingList[i].stacks.." stacks "..loadingList[i].type..","..loadingList[i].name..", "..from.." >> "..to, false)
+        printmsg("Creating Delivery: "..loadingList[i].count.." in "..loadingList[i].stacks.." stacks "..loadingList[i].type..","..loadingList[i].name..", "..from.." >> "..to, requestForce, false)
       end
     elseif log_level >= 2 then
       if #loadingList == 1 then
-        printmsg({"ltn-message.creating-delivery", from, to, loadingList[1].count, loadingList[1].localname})
+        printmsg({"ltn-message.creating-delivery", from, to, loadingList[1].count, loadingList[1].localname}, requestForce)
       else
-        printmsg({"ltn-message.creating-delivery-merged", from, to, totalStacks})
+        printmsg({"ltn-message.creating-delivery-merged", from, to, totalStacks}, requestForce)
       end
     end
 
@@ -1075,11 +1076,14 @@ end
 
 -- update stop output when train enters/leaves
 function UpdateTrain(train)
+  local trainForce = nil
+  local loco = GetMainLocomotive(train)
+  if loco then trainForce = loco.force end
   local trainID = GetTrainID(train)
   local trainName = GetTrainName(train)
 
   if not trainID then --train has no locomotive
-    if log_level >= 4 then printmsg("Notice (UpdateTrain): couldn't assign train id", false) end
+    if log_level >= 4 then printmsg("Notice (UpdateTrain): couldn't assign train id", trainForce, false) end
     --TODO: Update all stops?
     return
   end
@@ -1091,11 +1095,11 @@ function UpdateTrain(train)
       stop.parkedTrain = train
       stop.parkedTrainID = trainID
 
-      if log_level >= 3 then printmsg({"ltn-message.train-arrived", trainName, stop.entity.backer_name}) end
+      if log_level >= 3 then printmsg({"ltn-message.train-arrived", trainName, stop.entity.backer_name}, trainForce, false) end
 
       local frontDistance = GetDistance(train.front_stock.position, train.station.position)
       local backDistance = GetDistance(train.back_stock.position, train.station.position)
-      if log_level >= 4 then printmsg("Front Stock Distance: "..frontDistance..", Back Stock Distance: "..backDistance, false) end
+      if log_level >= 4 then printmsg("Front Stock Distance: "..frontDistance..", Back Stock Distance: "..backDistance, trainForce, false) end
       if frontDistance > backDistance then
         stop.parkedTrainFacesStop = false
       else
@@ -1147,11 +1151,11 @@ function UpdateTrain(train)
                 if itype and iname then
                   if itype == "item" then
                     local traincount = train.get_item_count(iname)
-                    if log_level >= 4 then printmsg("(UpdateTrain): updating delivery after train left "..delivery.from..", "..item.." "..tostring(traincount) ) end
+                    if log_level >= 4 then printmsg("(UpdateTrain): updating delivery after train left "..delivery.from..", "..item.." "..tostring(traincount), trainForce ) end
                     delivery.shipment[item] = traincount
                   elseif itype == "fluid" then
                     local traincount = train.get_fluid_count(iname)
-                    if log_level >= 4 then printmsg("(UpdateTrain): updating delivery after train left "..delivery.from..", "..item.." "..tostring(traincount) ) end
+                    if log_level >= 4 then printmsg("(UpdateTrain): updating delivery after train left "..delivery.from..", "..item.." "..tostring(traincount), trainForce ) end
                     delivery.shipment[item] = traincount
                   end
                 end
@@ -1167,7 +1171,7 @@ function UpdateTrain(train)
         -- remove train reference
         stop.parkedTrain = nil
         stop.parkedTrainID = nil
-        if log_level >= 3 then printmsg({"ltn-message.train-left", trainName, stop.entity.backer_name}) end
+        if log_level >= 3 then printmsg({"ltn-message.train-left", trainName, stop.entity.backer_name}, trainForce) end
 
         UpdateStopOutput(stop)
         return
@@ -1235,7 +1239,8 @@ function UpdateStop(stopID)
   local stop = global.LogisticTrainStops[stopID]
 
   -- remove invalid stops
-  if not stop or not (stop.entity and stop.entity.valid) or not (stop.input and stop.input.valid) or not (stop.output and stop.output.valid) or not (stop.lampControl and stop.lampControl.valid) then
+  -- if not stop or not (stop.entity and stop.entity.valid) or not (stop.input and stop.input.valid) or not (stop.output and stop.output.valid) or not (stop.lampControl and stop.lampControl.valid) then
+  if not(stop and stop.entity and stop.entity.valid and stop.input and stop.input.valid and stop.output and stop.output.valid and stop.lampControl and stop.lampControl.valid) then
     if log_level >= 1 then printmsg({"ltn-message.error-invalid-stop", stopID}) end
     for i=#StopIDList, 1, -1 do
       if StopIDList[i] == stopID then
@@ -1245,6 +1250,8 @@ function UpdateStop(stopID)
     return
   end
 
+  local stopForce = stop.entity.force
+  
   -- remove invalid trains
   if stop.parkedTrain and not stop.parkedTrain.valid then
     global.LogisticTrainStops[stopID].parkedTrain = nil
@@ -1358,16 +1365,16 @@ function UpdateStop(stopID)
                 if delivery.to == stop.entity.backer_name then
                   local newcount = count + traincount
                   if newcount > 0 then newcount = 0 end --make sure we don't turn it into a provider
-                  if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating requested count with train inventory: "..item.." "..count.."+"..traincount.."="..newcount) end
+                  if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating requested count with train inventory: "..item.." "..count.."+"..traincount.."="..newcount, stopForce) end
                   count = newcount
                 elseif delivery.from == stop.entity.backer_name then
                   if traincount <= deliverycount then
                     local newcount = count - (deliverycount - traincount)
                     if newcount < 0 then newcount = 0 end --make sure we don't turn it into a request
-                    if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating provided count with train inventory: "..item.." "..count.."-"..deliverycount - traincount.."="..newcount) end
+                    if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating provided count with train inventory: "..item.." "..count.."-"..deliverycount - traincount.."="..newcount, stopForce) end
                     count = newcount
                   else --train loaded more than delivery
-                    if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating delivery count with overloaded train inventory: "..item.." "..traincount) end
+                    if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating delivery count with overloaded train inventory: "..item.." "..traincount, stopForce) end
                     -- update delivery to new size
                     global.Dispatcher.Deliveries[trainID].shipment[item] = traincount
                   end
@@ -1379,12 +1386,12 @@ function UpdateStop(stopID)
               if delivery.to == stop.entity.backer_name then
                 local newcount = count + deliverycount
                 if newcount > 0 then newcount = 0 end --make sure we don't turn it into a provider
-                if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating requested count with delivery: "..item.." "..count.."+"..deliverycount.."="..newcount) end
+                if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating requested count with delivery: "..item.." "..count.."+"..deliverycount.."="..newcount, stopForce) end
                 count = newcount
               elseif delivery.from == stop.entity.backer_name and not delivery.pickupDone then
                 local newcount = count - deliverycount
                 if newcount < 0 then newcount = 0 end --make sure we don't turn it into a request
-                if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating provided count with delivery: "..item.." "..count.."-"..deliverycount.."="..newcount) end
+                if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." updating provided count with delivery: "..item.." "..count.."-"..deliverycount.."="..newcount, stopForce) end
                 count = newcount
               end
 
@@ -1399,11 +1406,11 @@ function UpdateStop(stopID)
           local provided = global.Dispatcher.Provided[item] or {}
           provided[stopID] = count
           global.Dispatcher.Provided[item] = provided
-          if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." provides "..item.." "..count.."("..minProvided..")", false) end
+          if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." provides "..item.." "..count.."("..minProvided..")", stopForce, false) end
         elseif count*-1 >= minRequested then
           count = count * -1
           requestItems[item] = count
-          if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." requested "..item.." "..count.."("..minRequested..")"..", age: "..global.Dispatcher.RequestAge[stopID].."/"..game.tick, false) end
+          if log_level >= 4 then printmsg("(UpdateStop) "..stop.entity.backer_name.." requested "..item.." "..count.."("..minRequested..")"..", age: "..global.Dispatcher.RequestAge[stopID].."/"..game.tick, stopForce, false) end
         end
 
       end -- for circuitValues
